fixed jumpy focus/hover state

--- a/src/components/forms/select/style.css
+++ b/src/components/forms/select/style.css
@@ -10,7 +10,7 @@
   padding: 10px;
   font-size: 14px;
   box-shadow: 0;
-  transition: all .3s;
+  transition: .3s ease border, .3s ease box-shadow;
   margin: 10px 0;
   display: inline-block;
   cursor: pointer;
@@ -22,7 +22,8 @@
 
 .Select:focus {
   outline: none ;
-  box-shadow: 0 0 0 2px #49a9ee;
+  border: 1px solid #49a9ee;
+  box-shadow: 0 0 1px 1px #49a9ee;
 }
 
 .selectWrapper {
